@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.1-9
-Date: 2008-7-9
+Version: 1.1-10
+Date: 2008-7-10
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
